2019-03-19  Toshihiko Kawano  <kawano@lanl.gov>

	* LICENSE: updated
	changed from Los Alamos to Triad

2019-03-18  Toshihiko Kawano  <kawano@lanl.gov>

	* README (DeCE): updated

	* source/decetable35.cpp: new file
	read and tabulate MF35 spectrum covariance

	* test/input/input14.dece: new file
	* test/input/input15.dece: new file
	* test/input/input16.dece: new file
	three more tests added

2019-03-16  KAWANO Toshihiko  <kawano@lanl.gov>

	* manual/option.html: new file
	* manual/index.html: updated
	manual updated

	* source/endflib.h: updated
	ENDF class and ENDFDict class updated
	NX, NI variables removed since redundant
	Some member variables in ENDFDict moved to private

2019-03-13  KAWANO Toshihiko  <kawano@lanl.gov>

	* test/decetest.sh: new file
	new test directory added, and 13 test cases are prepared

2019-03-12  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/dece.cpp: updated
	many source files were updated, and version increased to 1.2.2 Pyrite
	all changes were made in the develop branch

	* source/dece.cpp: (Notice): new method
	debugging information printed when verbos option is provided
	all warning messages will be printed regardless the verbos option

	* source/command.cpp (gettext): new function
	keep global option name

	* source/deceoperation.cpp: new file
	command operations moved from main

	* source/global.h (class GlobalOption): new file, new class
	define global options

	* source/deceglobaloption.cpp: new file
	setting global options, or print current setting

	* source/decopy.cpp: removed, and methods moved to other files
	* source/deceextract.cpp: new file, from dececopy
	* source/decelibread.cpp: new file, from dececopy
	* source/decescanindex.cpp: new file, from dececopy
	* source/decereadjust.cpp: new file, from dececopy
	re-adjust partial subsections, such as MT51-91 by the summed subsection (MT4)
	
	* source/decepoint.cpp: some methods were moved to other files
	* source/decefactor.cpp: new file, from decepoint