@@ -232,7 +232,7 @@ private use. Apatite is the first version of outside release (yet
 limited to the lab internal use). This version comes with some
 documents. Turquoise is a stable version of Apatite, including many
 bug fixes. Adularia, which was built in 2015, has several upgrades in
-the resonance region. DeCE was released as an open source software in
+the resonance region. DeCE was released as open source software in
 2016. In 2019 the source code was re-organized aiming at better
 readability, and released as the version Pyrite. Some test cases are
 also provided in this version.</p>
